--- a/templates/admin/admin_temp.html
+++ b/templates/admin/admin_temp.html
@@ -93,6 +93,17 @@ Website: http://www.webthemez.com/
 							</ul>
 						</li>
                         <li>
+                        <a href="#"><i class="fa fa-building-o"></i>EDGES<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a href="/admin_addedges">Add</a>
+                            </li>
+                            <li>
+                                <a href="/admin_view_edges">View</a>
+                            </li>
+							</ul>
+						</li>
+                        <li>
                         <a href="#"><i class="fa fa-plane"></i>SERVICE<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
